--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "plugins": ["@babel/plugin-syntax-dynamic-import"]
+  "presets": ["@babel/typescript"],
+  "plugins": [
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
+  ]
 }
