--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "demo",
+  "name": "swq",
   "version": "1.0.0",
-  "description": "webpack 测试项目",
+  "description": "webpack打包",
   "private": true,
+  "main": "src/index.js",
   "scripts": {
+    "check-types": "tsc",
     "dev": "webpack-dev-server --open --config ./webpack/index.dev.js",
     "build": "webpack --config ./webpack/index.prod.js"
   },
@@ -12,18 +14,26 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-typescript": "^7.6.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "declaration-bundler-webpack-plugin": "^1.0.3",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "open-browser-webpack-plugin": "^0.0.5",
     "postcss-loader": "^3.0.0",
+    "source-map": "^0.7.3",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
-    "ts-loader": "^6.2.1",
     "typescript": "^3.6.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.2",
@@ -32,6 +42,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.144",
+    "global": "^4.4.0",
     "lodash": "^4.17.15"
   }
 }
