--- a/package.json
+++ b/package.json
@@ -5,39 +5,33 @@
   "private": true,
   "main": "src/index.js",
   "scripts": {
-    "check-types": "tsc",
     "dev": "webpack-dev-server --open --config ./webpack/index.dev.js",
-    "build": "webpack --config ./webpack/index.prod.js"
+    "build": "npm run build:js && npm run build:types",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "webpack --config ./webpack/index.prod.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
     "declaration-bundler-webpack-plugin": "^1.0.3",
-    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
     "open-browser-webpack-plugin": "^0.0.5",
-    "postcss-loader": "^3.0.0",
-    "source-map": "^0.7.3",
-    "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
     "typescript": "^3.6.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.2"
   },
