--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-typescript": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^3.0.0",
     "declaration-bundler-webpack-plugin": "^1.0.3",
+    "eslint": "^6.6.0",
+    "eslint-plugin-react": "^7.16.0",
     "html-webpack-plugin": "^3.2.0",
     "open-browser-webpack-plugin": "^0.0.5",
     "terser-webpack-plugin": "^2.2.1",
