--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
-  "presets": ["@babel/typescript", "@babel/preset-env"],
+  "presets": [
+    "@babel/typescript",
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
   "plugins": [
     "@babel/proposal-class-properties",
     "@babel/proposal-object-rest-spread",
