--- a/package.json
+++ b/package.json
@@ -48,9 +48,14 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.7.0",
     "@babel/runtime": "^7.7.2",
     "@types/lodash": "^4.14.144",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
     "global": "^4.4.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0"
   }
 }
