--- a/package.json
+++ b/package.json
@@ -26,18 +26,26 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.7.0",
     "@babel/preset-typescript": "^7.6.0",
+    "@babel/runtime": "^7.7.2",
     "@types/jest": "^24.0.21",
+    "@types/lodash": "^4.14.146",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-module-resolver": "^3.2.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
     "declaration-bundler-webpack-plugin": "^1.0.3",
     "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.16.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "open-browser-webpack-plugin": "^0.0.5",
+    "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.4",
@@ -48,13 +56,12 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@babel/preset-react": "^7.7.0",
-    "@babel/runtime": "^7.7.2",
-    "@types/lodash": "^4.14.144",
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.4",
+    "@tarojs/components": "^1.3.22",
+    "@tarojs/taro": "^1.3.22",
+    "@tarojs/taro-h5": "^1.3.22",
     "global": "^4.4.0",
     "lodash": "^4.17.15",
+    "nervjs": "^1.5.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   }
