--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "@typescript-eslint/parser": "^2.6.0",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
     "declaration-bundler-webpack-plugin": "^1.0.3",
     "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.16.0",
+    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "open-browser-webpack-plugin": "^0.0.5",
+    "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.2.1",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.4",
@@ -50,8 +53,10 @@
   "dependencies": {
     "@babel/runtime": "^7.7.2",
     "@types/lodash": "^4.14.144",
+    "@types/qs": "^6.9.1",
     "dayjs": "^1.8.20",
     "global": "^4.4.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "qs": "^6.9.1"
   }
 }
